import bird.Fly;

import java.util.ArrayList;
import java.util.List;

public class Main {
    public static void main(String[] args) {
        List<Fly> allBirds = new ArrayList<>();
    }
}