package bird;

interface Eat {
    abstract void eat();
}
