package bird;

public interface Fly {
    abstract void fly();
}
