package bird;

public class Pigeon implements Fly{
    @Override
    public void fly() {
        System.out.println("Pigeon Flies");
    }
}
