package bird;

interface SaySomething {
    abstract void saySomething();
}
